vemo-app/main/default/objects/StudentProgramAmountDue__c/StudentProgramAmountDue__c.object-meta.xml
<CustomObject>
    <label>Student Program Amount Due</label>
    <nameField>
        <displayFormat>AD-{00000000}</displayFormat>
        <label>Student Program Amount Due</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Program Amount Due</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>