vemo-app/main/default/objects/StudentProgramAmountDue__c/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Agreement related to this Student Program Amount Due.</inlineHelpText>
    <label>Agreement</label>
    <referenceTo>StudentProgram__c</referenceTo>
    <relationshipLabel>Student Program Amount Due</relationshipLabel>
    <relationshipName>Student_Program_Debits</relationshipName>
    <type>Lookup</type>
</CustomField>