vemo-app/main/default/objects/StudentProgramAmountDue__c/fields/AmountAllocated__c.field-meta.xml
<CustomField>
    <fullName>AmountAllocated__c</fullName>
    <label>Amount Allocated</label>
    <summarizedField>PaymentAllocationDetail__c.AmountAllocated__c</summarizedField>
    <summaryForeignKey>PaymentAllocationDetail__c.StudentProgramAmountDue__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>