vemo-app/main/default/objects/StudentProgramAmountDue__c/fields/AssessmentDateTime__c.field-meta.xml
<CustomField>
    <fullName>AssessmentDateTime__c</fullName>
    <inlineHelpText>The date/time stamp of when the amount due was calculated/assessed.</inlineHelpText>
    <label>Assessment DateTime</label>
    <type>DateTime</type>
</CustomField>