vemo-app/main/default/objects/StudentProgramAmountDue__c/fields/ExcludeFromBalance__c.field-meta.xml
<CustomField>
    <fullName>ExcludeFromBalance__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Indicates that an amount due should not be included in the account statement summaries. Used primarily for reconciliation amounts that are pre-assessed for future months, but which should not actually show up on the statement/bill until that month arrives</inlineHelpText>
    <label>Exclude from Balance</label>
    <type>Checkbox</type>
</CustomField>