vemo-app/main/default/objects/StudentProgramAmountDue__c/fields/IncomeShare__c.field-meta.xml
<CustomField>
    <fullName>IncomeShare__c</fullName>
    <description>A snapshot of the Income Share (Post-Certification) at the moment of creation</description>
    <inlineHelpText>A snapshot of the Income Share (Post-Certification) at the moment of creation</inlineHelpText>
    <label>Income Share</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>