vemo-app/main/default/objects/StudentProgramAmountDue__c/fields/IncomeVerification__c.field-meta.xml
<CustomField>
    <fullName>IncomeVerification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Income Verification Object used to derive Monthly Income during Assessment</description>
    <inlineHelpText>Income Verification Object used to derive Monthly Income during Assessment</inlineHelpText>
    <label>Income Verification</label>
    <referenceTo>IncomeVerification__c</referenceTo>
    <relationshipLabel>Student Program Amount Due</relationshipLabel>
    <relationshipName>Student_Program_Amount_Due</relationshipName>
    <type>Lookup</type>
</CustomField>