vemo-app/main/default/objects/StudentProgramAmountDue__c/fields/Refund__c.field-meta.xml
<CustomField>
    <fullName>Refund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Refund</label>
    <referenceTo>Refund__c</referenceTo>
    <relationshipLabel>Student Program Amount Due</relationshipLabel>
    <relationshipName>Student_Program_Amount_Due</relationshipName>
    <type>Lookup</type>
</CustomField>