vemo-app/main/default/objects/StudentProgramAmountDue__c/fields/RemainingAllocation__c.field-meta.xml
<CustomField>
    <fullName>RemainingAllocation__c</fullName>
    <formula>Amount__c - AmountAllocated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Allocation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>