vemo-app/main/default/objects/StudentProgramAmountDue__c/fields/StudentProgramMonthlyStatus__c.field-meta.xml
<CustomField>
    <fullName>StudentProgramMonthlyStatus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Student Program Monthly Status related to this Student Program Amount Due.</inlineHelpText>
    <label>Student Program Monthly Status</label>
    <referenceTo>StudentProgramMonthlyStatus__c</referenceTo>
    <relationshipLabel>Student Program Amount Due</relationshipLabel>
    <relationshipName>Student_Program_Debits</relationshipName>
    <type>Lookup</type>
</CustomField>