vemo-app/main/default/objects/StudentProgramAmountDue__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>Reconciliation, Monthly Amount, or Fee.</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DebitType</valueSetName>
    </valueSet>
</CustomField>